--- a/templates/core/document_detail.html
+++ b/templates/core/document_detail.html
@@ -9,8 +9,11 @@
     </div>
   </div>
   <div class="d-flex gap-2">
-    <a class="btn btn-outline-secondary btn-sm" href="{% url 'core:document_edit' document.pk %}">Edit</a>
-    <a class="btn btn-outline-danger btn-sm" href="{% url 'core:document_delete' document.pk %}">Delete</a>
+     {% if user.is_staff or user.id == document.owner_id %}
+        <a class="btn btn-outline-primary btn-sm" href="{% url 'core:document_share' document.pk %}">Share</a>
+        <a class="btn btn-outline-secondary btn-sm" href="{% url 'core:document_edit' document.pk %}">Edit</a>
+        <a class="btn btn-outline-danger btn-sm" href="{% url 'core:document_delete' document.pk %}">Delete</a>
+     {% endif %}
   </div>
 </div>
 
