--- a/templates/core/document_detail.html
+++ b/templates/core/document_detail.html
@@ -23,6 +23,13 @@
   </div>
 </div>
 
+{% if document.visibility_status == "moderated" %}
+  <div class="alert alert-warning">
+    <b>Moderated:</b> {{ document.moderated_reason|default:"This document has been moderated by an administrator." }}
+  </div>
+{% endif %}
+
+
 <div class="card">
   <div class="card-body" style="white-space: pre-wrap;">{{ document.content }}</div>
 </div>
